--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,21 @@
 {
   "manifest_version": 2,
 
-  "name": "Getting started example",
-  "description": "This extension allows the user to change the background color of the current page.",
+  "name": "DarkMode",
+  "description": "A dark theme for popular websites.",
   "version": "1.0",
 
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "assets/img/icon.png",
     "default_popup": "popup.html"
   },
   "permissions": [
     "activeTab",
     "storage"
-  ]
+],
+"content_scripts": [{
+    "css": ["assets/css/style.css"],
+    "js": ["assets/js/content.js"],
+    "matches": ["https://medium.com/*"]
+  }]
 }
